SONARPY-1308 CR fixes